[package]
name = "generate_tokens"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0"
